--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "ejs": "^3.0.1",
     "express": "^4.17.1"
   }
 }
