--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
   "homepage": "https://github.com/RateMyDad/RMD_AppServer#readme",
   "dependencies": {
     "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
     "express-session": "^1.17.0",
-    "mongoose": "^5.9.1"
+    "jsonwebtoken": "^8.5.1",
+    "jws": "^4.0.0",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.1",
+    "morgan": "^1.10.0"
   }
 }
